--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
@@ -24,17 +26,18 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.12.0",
+    "hume": "^0.8.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "webextension-polyfill": "^0.12.0",
-    "wretch": "^2.11.0",
-    "dotenv": "^16.4.5",
-    "hume": "^0.8.3"
+    "wretch": "^2.11.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.28",
